--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.Zone" />
         <activity
+            android:name=".ui.screens.user.UserProfileEdit"
+            />
+
+        <activity
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name"
