corrigido visualizar perfil

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Zone" />
+            android:theme="@style/Theme.Zone">
+        </activity>
     </application>
 
 </manifest>
